<resources>
    <string name="app_name">Week2-Weekend Project</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Address">Address</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Skype_ID">Skype ID</string>
    <string name="Email_Address">Email</string>
    <string name="Into_DB">Insert into Database</string>
</resources>
